# cpp-snippets

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  loops.cpp
src/heteroContainer/: container.cpp  variant.cpp
src/heteroContainer/include/: container.hpp  variant.hpp
src/include/loops/: functions.hpp  loops.hpp
src/loops/: loops.cpp
src/loops/include/: loops.hpp
src/pointers/include/: swapping.hpp
src/redirect/include/: coutcollector.hpp  ostreamredirection.hpp  scopedredirect.hpp
test/: containertests.cpp  looptests.cpp  pointerstests.cpp  redirecttests.cpp
